fix bad overflow removal

--- a/assets/styles/components/_excerpt-fw.scss
+++ b/assets/styles/components/_excerpt-fw.scss
@@ -6,6 +6,7 @@
   display: flex;
   height: 40vh;
   align-items: center;
+  overflow: hidden;
 }
 
 .excerpt-fw__image {
